crates/bayou_compiler/src/lexer/snapshots/bayou_compiler__lexer__tests__integer.snap
---
source: crates/bayou_compiler/src/lexer/tests.rs
info: "100"
---
- - kind:
      Integer: 100
    span:
      start: 0
      end: 3
- []

