crates/bayou_compiler/src/lexer/snapshots/bayou_compiler__lexer__tests__integer_overflow.snap
---
source: crates/bayou_compiler/src/lexer/tests.rs
info: "100000000000000000000"
---
- []
- - kind: IntegerOverflow
    span:
      start: 0
      end: 21

